--- a/pages/Destinos turisticos.html
+++ b/pages/Destinos turisticos.html
@@ -13,6 +13,7 @@
     
 </head>
 <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"></a>
@@ -45,7 +46,7 @@
         </div>
     </nav>
 
-   
+</header>
     <nav class="destinosTuristicos ">
 
         <ul>
