--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        <header>
 
     <h1 class=" turismo el amanecer animate__animated  animate__backInDown">Turismo el amanecer</h1>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"></a>
@@ -35,7 +36,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="pages/Destinos turisticos.html">DESTINOS TURISTICOS</a>
                     </li>
@@ -66,7 +67,7 @@
              <ul>
                  <h2>visita Mendoza</h2>
                  <h3>La Tierra del sol y el buen vino</h3>
-                 <img class="animate__animated  animate__backInDown"  src="../imagenes/alta montaña1.jpg" alt="">
+                 <img class="animate__animated  animate__backInDown"  src="/imagenes/alta montaña1.jpg" alt="">
         
        </div>
        
