--- a/pages/Reserva.html
+++ b/pages/Reserva.html
@@ -32,10 +32,10 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Tipos de Excursiones.html">TIPOS DE EXCURSIONES</a>
+                            <a class="nav-link active" aria-current="page" href="Destinos turisticos.html">DESTINOS TURISTICOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Reserva.html">RESERVA</a>
+                            <a class="nav-link active" aria-current="page" href="Tipos de Excursiones.html">TIPOS DE EXCURSIONES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="Contactanos.html">CONTACTANOS</a>
