--- a/pages/Destinos turisticos.html
+++ b/pages/Destinos turisticos.html
@@ -60,11 +60,27 @@
      </nav>
     <!-- aca iria un carrusel de imagenes
      -->
-    <div class="zonas">
-        <img class data-aos="zoom-in"src="../imagenes/San Rafael2.jpg" alt="">
-        <img class data-aos="zoom-in" src="../imagenes/alta montaña1.jpg" alt="">
-        <img class data-aos="zoom-in "src="../imagenes/tour del vino2.jpg"alt="">
-    </div>
+     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../imagenes/alta montaña1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../imagenes/aventura3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../imagenes/sanrafael3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
    
     <footer>
         <p>Sitio Web creado por <strong>Rosalia</strong></p>
